<resources>
    <string name="app_name">MyAnimeInfo2</string>

    <string name="anime">anime</string>
    <string name="manga">manga</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <string-array name="topAnimeSubtypes">
        <item>all</item>
        <item>airing</item>
        <item>upcoming</item>
        <item>tv</item>
        <item>movie</item>
        <item>ova</item>
        <item>special</item>
        <item>bypopularity</item>
        <item>favorite</item>
    </string-array>

    <string-array name="topMangaSubtypes">
        <item>all</item>
        <item>manga</item>
        <item>novels</item>
        <item>oneshots</item>
        <item>doujin</item>
        <item>manhwa</item>
        <item>manhua</item>
        <item>bypopularity</item>
        <item>favorite</item>
    </string-array>

    <string-array name="animeListFilter">
        <item>all</item>
        <item>watching</item>
        <item>completed</item>
        <item>onhold</item>
        <item>dropped</item>
        <item>plan to watch</item>
    </string-array>

    <string-array name="mangaListFilter">
        <item>all</item>
        <item>reading</item>
        <item>completed</item>
        <item>onhold</item>
        <item>dropped</item>
        <item>plan to read</item>
    </string-array>

    <string-array name="seasonNames">
        <item>winter</item>
        <item>spring</item>
        <item>summer</item>
        <item>fall</item>
    </string-array>

    <string name="internet_error">Error! Please check your internet connection and refresh.</string>
    <string name="timeout_try_again">Error, timeout! Please try again.</string>
    <string name="error_occured">Error Occurred!</string>
    <string name="refresh">Refresh</string>
    <string name="character_image">Character Image</string>
    <string name="loading_">Loading…</string>
    <string name="nothing_found">Nothing Found!</string>
    <string name="loading_more_">Loading More…</string>
    <string name="preview_image">Preview Image</string>
    <string name="user_image">User Image</string>
    <string name="overall">Overall</string>
    <string name="story">Story</string>
    <string name="sound">Sound</string>
    <string name="enjoyment">Enjoyment</string>
    <string name="character">Character</string>
    <string name="animation">Animation</string>
    <string name="plan_to_watch">Plan to Watch</string>
    <string name="score_">Score:</string>
    <string name="volumes_">Volumes:</string>
    <string name="chapters_">Chapters:</string>
    <string name="score">Score</string>
    <string name="ranked">Ranked</string>
    <string name="popularity">Popularity</string>
    <string name="members">Members</string>
    <string name="info">Info</string>
    <string name="premiered">Premiered</string>
    <string name="broadcast">Broadcast</string>
    <string name="status">Status</string>
    <string name="episodes">Episodes</string>
    <string name="episodes_">Episodes:</string>
    <string name="duration">Duration</string>
    <string name="synopsis">Synopsis</string>
    <string name="background">Background</string>
    <string name="close_button">Close Button</string>
    <string name="poster_image">Poster Image</string>
    <string name="click_for_more">Click for more…</string>
    <string name="search_caution_text">MAL username should be precise. If you don\'t know your username just sign-in to MAL and go to your profile. Example: myanimelist.net/profile/YOUR_USERNAME</string>
    <string name="caution_">Caution!</string>
    <string name="manga_list">Manga List</string>
    <string name="anime_list">Anime List</string>
    <string name="no_mal_user_set">No MAL User Set</string>
    <string name="click_to_set_a_mal_user">Click to set a MAL User.</string>
    <string name="profile">Profile</string>
    <string name="remove_user">Remove User</string>
    <string name="change_user">Change User</string>
    <string name="anime_stats">Anime Stats</string>
    <string name="days_">Days:</string>
    <string name="mean_score_">Mean Score:</string>
    <string name="watching">Watching</string>
    <string name="completed">Completed</string>
    <string name="on_hold">On-Hold</string>
    <string name="dropped">Dropped</string>
    <string name="rewatched">Rewatched</string>
    <string name="manga_stats">Manga Stats</string>
    <string name="reading">Reading</string>
    <string name="plan_to_read">Plan to Read</string>
    <string name="volumes">Volumes</string>
    <string name="chapters">Chapters</string>
    <string name="reread">Reread</string>
    <string name="adaptations">Adaptations</string>
    <string name="prequels">Prequels</string>
    <string name="sequels">Sequels</string>
    <string name="side_story">Side Story</string>
    <string name="no_relation_found">No relation found.</string>
    <string name="rated">Rated</string>
    <string name="type">Type</string>
    <string name="clear_all">Clear All</string>
    <string name="main_page">Main Page</string>
    <string name="anime_capital">Anime</string>
    <string name="top_lists">Top Lists</string>
    <string name="schedule">Schedule</string>
    <string name="search_anime">Search Anime</string>
    <string name="anime_by_season">Anime by Season</string>
    <string name="manga_capital">Manga</string>
    <string name="search_manga">Search Manga</string>
    <string name="others">Others</string>
    <string name="search_user">Search User</string>
    <string name="no_past_search_found_">No past search found!</string>
    <string name="please_retry_again">Please retry again.</string>

    <string-array name="ratedFilter">
        <item>G</item>
        <item>PG</item>
        <item>PG-13</item>
        <item>R-17</item>
        <item>R</item>
    </string-array>

    <string-array name="animeStatusFilter">
        <item>Airing</item>
        <item>Completed</item>
        <item>TBA</item>
    </string-array>

    <string-array name="mangaStatusFilter">
        <item>Publishing</item>
        <item>Completed</item>
        <item>TBP</item>
    </string-array>

    <string-array name="animeTypeFilter">
        <item>TV</item>
        <item>OVA</item>
        <item>Movie</item>
        <item>Special</item>
        <item>ONA</item>
    </string-array>

    <string-array name="mangaTypeFilter">
        <item>Manga</item>
        <item>Novel</item>
        <item>Oneshot</item>
        <item>Manhua</item>
        <item>Manhwa</item>
    </string-array>

    <string-array name="scoreFilter">
        <item>5></item>
        <item>6></item>
        <item>7></item>
        <item>8></item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_me">About Me</string>
</resources>
